local et session storage

--- a/page2.html
+++ b/page2.html
@@ -8,47 +8,52 @@
   </head>
   <body>
     <button type="button" id="retour">Déconnexion</button>
-    <p>Avez-vous apprécié votre voyage ?</p>
-    <label for="q1-oui">Oui</label>
-    <input id="q1-oui" checked />
-    <label for="q1-non">Non</label>
-    <input id="q1-non" />
-    <br />
-    <br />
-    <br />
-    <label for="q2" id="labelQ2"
-      >Quelle était votre destination de voyage ?</label
-    >
-    <input class="page2-input" id="q2" type="text" name="q2" />
-    <br />
-    <br />
-    <label for="q3" id="labelQ3">Quelle était la durée de votre voyage ?</label>
-    <input class="page2-input" id="q3" type="text" name="q3" />
-    <br />
-    <br />
-    <p>Notez sur 5 le service reçu durant votre vol.</p>
-    <label for="q4-1">1</label>
-    <input id="q4-1" checked />
-    <label for="q4-2">2</label>
-    <input id="q4-2" />
-    <label for="q4-3">3</label>
-    <input id="q4-3" />
-    <label for="q4-4">4</label>
-    <input id="q4-4" />
-    <label for="q4-5">5</label>
-    <input id="q4-5" />
-    <br />
-    <br />
-    <p>Pensez-vous réutiliser nos service ?</p>
-    <label for="q5-oui">Oui</label>
-    <input id="q5-oui" checked />
-    <label for="q5-non">Non</label>
-    <input id="q5-non" />
-    <br />
-    <br />
-    <br />
-    <button type="button" id="submit">Envoyer</button>
+    <div class="Sondage">
+      <p>Avez-vous apprécié votre voyage ?</p>
+      <label for="q1-oui">Oui</label>
+      <input id="q1-oui" checked />
+      <label for="q1-non">Non</label>
+      <input id="q1-non" />
+      <br />
+      <br />
+      <br />
+      <label for="q2" id="labelQ2"
+        >Quelle était votre destination de voyage ?</label
+      >
+      <input class="page2-input" id="q2" type="text" name="q2" />
+      <br />
+      <br />
+      <label for="q3" id="labelQ3"
+        >Quelle était la durée de votre voyage ?</label
+      >
+      <input class="page2-input" id="q3" type="text" name="q3" />
+      <br />
+      <br />
+      <p>Notez sur 5 le service reçu durant votre vol.</p>
+      <label for="q4-1">1</label>
+      <input id="q4-1" checked />
+      <label for="q4-2">2</label>
+      <input id="q4-2" />
+      <label for="q4-3">3</label>
+      <input id="q4-3" />
+      <label for="q4-4">4</label>
+      <input id="q4-4" />
+      <label for="q4-5">5</label>
+      <input id="q4-5" />
+      <br />
+      <br />
+      <p>Pensez-vous réutiliser nos service ?</p>
+      <label for="q5-oui">Oui</label>
+      <input id="q5-oui" checked />
+      <label for="q5-non">Non</label>
+      <input id="q5-non" />
+      <br />
+      <br />
+      <br />
+      <button type="button" id="submit">Envoyer</button>
+    </div>
     <div class="allo"></div>
+    <div class="stat"></div>
     <script src="script.js"></script>
   </body>
 </html>
